# pharma-ai-assistant-fr

medicalchatbot/: .gitignore  README.md  pyproject.toml  reponse_finale.md  reponse_finale_data_miner.md  reponse_finale_knowledge.md  serper_results.json
medicalchatbot/db/: chroma.sqlite3
medicalchatbot/src/medicalchatbot/: app.py  crew.py  main.py  medical_flow.py
medicalchatbot/src/medicalchatbot/config/: agents.yaml  tasks.yaml
medicalchatbot/src/medicalchatbot/ocr/: app.py
medicalchatbot/src/medicalchatbot/static/css/: medical.css
medicalchatbot/src/medicalchatbot/static/js/: medical.js
medicalchatbot/src/medicalchatbot/templates/: index.html
