[project]
name = "medicalchatbot"
version = "0.1.0"
description = "MedicalChatbot using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "agentops>=0.4.6",
    "aiohttp>=3.10.11",
    "bs4>=0.0.2",
    "crewai[tools]>=0.114.0,<1.0.0",
    "easyocr>=1.7.2",
    "flask>=3.1.0",
    "google-generativeai>=0.8.5",
    "json-repair>=0.41.0",
    "langchain-groq>=0.3.2",
    "langflow>=1.1.0",
    "opencv-python>=4.11.0.86",
    "playwright>=1.51.0",
    "selectolax>=0.3.28",
    "selenium>=4.31.0",
    "tensorflow>=2.19.0",
    "webdriver-manager>=4.0.2",
]

[project.scripts]
medicalchatbot = "medicalchatbot.main:run"
run_crew = "medicalchatbot.main:run"
train = "medicalchatbot.main:train"
replay = "medicalchatbot.main:replay"
test = "medicalchatbot.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
